--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -9,14 +9,14 @@ body {
   font-size: 14px;
 }
 
-ul {
-  margin: 0;
-}
+/* ul {                     */
+/*   margin: 0;             */
+/* }                        */
 
-li {
-  padding: 0;
-  list-style-type: none;
-}
+/* li {                     */
+/*   padding: 0;            */
+/*   list-style-type: none; */
+/* }                        */
 
 .content {
   margin-top: 48px;
