Add keybind to toggle opening left nav

--- a/client/src/styles/file-list.css
+++ b/client/src/styles/file-list.css
@@ -1,7 +1,9 @@
-.leftNav {
-  z-index: 1000 !important;
+.leftNavInner {
+  /* padding-top: 72px; */
 }
 
 .leftNavInner {
-  padding-top: 72px;
+  ul {
+    margin: 0;
+  }
 }
