--- a/client/src/styles/file.css
+++ b/client/src/styles/file.css
@@ -34,7 +34,7 @@
   color: #333;
   word-break: break-all;
   text-decoration: none;
-  border-bottom: 1px solid #eee;
+  /* border-bottom: 1px solid #eee; */
   &:before {
     @extend icon;
     padding-right: 0.5em;
